--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -328,10 +328,10 @@
 
       </div>
       <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
-        <i class="lnr lnr-arrow-left"></i>
+        <i class="lnr lnr-chevron-left"></i>
       </a>
       <a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
-        <i class="lnr lnr-arrow-right"></i>
+        <i class="lnr lnr-chevron-right"></i>
       </a>
     </div>
     </div>
@@ -632,11 +632,11 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+                <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
                 <ol class="carousel-indicators">
-                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#myCarousel" data-slide-to="1"></li>
-                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                  <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel2" data-slide-to="1"></li>
+                  <li data-target="#myCarousel2" data-slide-to="2"></li>
                 </ol>   
                 <div class="carousel-inner">
                   <div class="item carousel-item active">
@@ -949,11 +949,11 @@
                   </div>
           
                 </div>
-                <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
-                  <i class="lnr lnr-arrow-left"></i>
+                <a class="carousel-control left carousel-control-prev" href="#myCarousel2" data-slide="prev">
+                  <i class="lnr lnr-chevron-left"></i>
                 </a>
-                <a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
-                  <i class="lnr lnr-arrow-right"></i>
+                <a class="carousel-control right carousel-control-next" href="#myCarousel2" data-slide="next">
+                  <i class="lnr lnr-chevron-right"></i>
                 </a>
               </div>
               </div>
@@ -1059,11 +1059,11 @@
 
             <div class="row">
               <div class="col-md-12">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+                <div id="myCarousel3" class="carousel slide" data-ride="carousel" data-interval="0">
                 <ol class="carousel-indicators">
-                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#myCarousel" data-slide-to="1"></li>
-                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                  <li data-target="#myCarousel3" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel3" data-slide-to="1"></li>
+                  <li data-target="#myCarousel3" data-slide-to="2"></li>
                 </ol>   
                 <div class="carousel-inner">
                   <div class="item carousel-item active">
@@ -1376,11 +1376,11 @@
                   </div>
           
                 </div>
-                <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
-                  <i class="lnr lnr-arrow-left"></i>
+                <a class="carousel-control left carousel-control-prev" href="#myCarousel3" data-slide="prev">
+                  <i class="lnr lnr-chevron-left"></i>
                 </a>
-                <a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
-                  <i class="lnr lnr-arrow-right"></i>
+                <a class="carousel-control right carousel-control-next" href="#myCarousel3" data-slide="next">
+                  <i class="lnr lnr-chevron-right"></i>
                 </a>
               </div>
               </div>
