--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -38,7 +38,7 @@
               </div>
           </div> -->
           <div class="header_middle">
-              <div class="p-2">
+              <div>
                   <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-2 col-md-3 col-sm-3 col-3">
                           <div class="logo">
@@ -334,7 +334,7 @@
                               </div>
                           </div>
                       </div>
-                      <div class="col-lg-6">
+                      <div class="col-lg-8">
                           <!--main menu start-->
                           <div class="main_menu menu_position">
                               <nav>
@@ -395,7 +395,7 @@
                           </div>
                           <!--main menu end-->
                       </div>
-                      <div class="col-lg-3">
+                      <div class="col-lg-2">
                           <div class="call-support">
                               <p><a href="tel:(08)23456789">(08) 23 456 789</a><b translate>home.support</b></p>
                           </div>
