--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -48,7 +48,7 @@
                       <div class="col-lg-10 col-md-6 col-sm-7 col-8">
                           <div class="header_right_info">
                               <div class="search_container">
-                                  <form action="#">
+                                  <form action="/search">
                                       <div class="hover_category">
                                           <select class="select_option" name="select" id="categori2" style="display: none;">
                                               <option selected="" value="1" translate>home.select_category</option>
@@ -380,16 +380,16 @@
                                               </ul>
                                           </div>
                                       </li> -->
-                                      <li><a routerLink="/" translate>home.fruits</a>
+                                      <li><a routerLink="/search" translate>home.fruits</a>
                                       </li>
-                                      <li><a routerLink="/" translate>home.vegetables</a>
+                                      <li><a routerLink="/search" translate>home.vegetables</a>
                                       </li>
-                                      <li><a routerLink="/" translate>home.grocery</a>
+                                      <li><a routerLink="/search" translate>home.grocery</a>
                                       </li>
-                                      <li><a href="/" translate>home.items</a></li>
-                                      <li><a href="/" translate>home.dry_fruits</a></li>
-                                      <li><a href="/" translate>home.fast_food</a></li>
-                                      <li><a href="/" translate>home.icecream</a></li>
+                                      <li><a href="/search" translate>home.items</a></li>
+                                      <li><a href="/search" translate>home.dry_fruits</a></li>
+                                      <li><a href="/search" translate>home.fast_food</a></li>
+                                      <li><a href="/search" translate>home.icecream</a></li>
                                   </ul>
                               </nav>
                           </div>
