--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -1,4 +1,5 @@
-
+<div class="container">
+  
  <ngb-carousel>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
@@ -63,3 +64,4 @@
       </div>
     </ng-template>
   </ngb-carousel>
+</div>
