--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -1,5 +1,5 @@
  
-    <header>
+    <header class="container">
       <div class="main_header">
           <!-- <div class="header_top">
               <div class="container">
@@ -202,7 +202,7 @@
               </div>
           </div>
           <div id="myHeader" class="header_bottom sticky-header">
-              <div class="px-2">
+              <div class="">
                   <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-2">
                           <div class="categories_menu">
