--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -8,9 +8,9 @@
       <div class="owl-slide cover" >
         <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
           <div class="container">
-          <div class="row justify-content-center justify-content-md-start">
-            <div class="col-lg-6 static">
-            <div class="slide-text white">
+          <div class="row">
+            <div class="col-lg-12 static">
+            <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
               <h2 class="owl-slide-animated owl-slide-title" translate="home.fresh_fruits"> </h2>
               <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
             </div>
@@ -27,9 +27,9 @@
       <div class="owl-slide cover" style="background-image: url(/assets/img/slides/slider-image-2.jpg);">
         <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
           <div class="container">
-          <div class="row justify-content-center justify-content-md-start">
-            <div class="col-lg-6 static">
-            <div class="slide-text white">
+          <div class="row">
+            <div class="col-lg-12 static">
+            <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
               <h2 class="owl-slide-animated owl-slide-title" translate="home.vegetables"> </h2>
            
               <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
@@ -49,9 +49,9 @@
       <div class="owl-slide cover" style="background-image: url(/assets/img/slides/slider-image-1.jpg);">
         <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
           <div class="container">
-          <div class="row justify-content-center justify-content-md-start">
-            <div class="col-lg-6 static">
-            <div class="slide-text white">
+          <div class="row">
+            <div class="col-lg-12 static">
+            <div class="slide-text white" [ngClass]="{'rtl': is_rtl}">
               <h2 class="owl-slide-animated owl-slide-title" translate="home.grocery"></h2>
               <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
             </div>
