--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -1,5 +1,5 @@
  
-    <header class="container">
+    <header class="containe">
       <div class="main_header">
           <!-- <div class="header_top">
               <div class="container">
@@ -37,7 +37,7 @@
                   </div>
               </div>
           </div> -->
-          <div class="header_middle">
+          <div class="container header_middle">
               <div>
                   <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-2 col-md-3 col-sm-3 col-3">
@@ -201,7 +201,7 @@
                   </div>
               </div>
           </div>
-          <div id="myHeader" class="header_bottom sticky-header">
+          <div id="myHeader" class="container header_bottom sticky-header">
               <div class="">
                   <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-2">
