--- a/src/app/topheader/topheader.component.scss
+++ b/src/app/topheader/topheader.component.scss
@@ -288,6 +288,7 @@ $small-mobile: 'only screen and (max-width: 479px)';
     position: fixed;
     z-index: 99;
     width: 100%;
+    margin-left: 100px;
     top: 0;
     background: rgba(255, 255, 255, .9);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.11);
