--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,7 +33,7 @@
             <ul>
               <li><i class="ti-home"></i>97845 Baker st. 567<br>Los Angeles - US</li>
               <li><i class="ti-headphone-alt"></i>+94 423-23-221</li>
-              <li><i class="ti-email"></i><a href="#0">info@allaia.com</a></li>
+              <li><i class="ti-email"></i><a href="#0">info@gmail.com</a></li>
             </ul>
           </div>
         </div>
@@ -86,7 +86,6 @@
           <ul class="additional_links">
             <li><a href="#0">Terms and conditions</a></li>
             <li><a href="#0">Privacy</a></li>
-            <li><span>© 2020 Allaia</span></li>
           </ul>
         </div>
       </div>
